examples/test/testpolicy9530.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9530
  namespace: namespace243
spec:
  podSelector:
    matchLabels:
      key21: value31
      key26: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value30
      podSelector:
        matchLabels:
          key7: value19
          key26: value1
          key46: value20
